updated team panel

--- a/public/index.html
+++ b/public/index.html
@@ -520,24 +520,20 @@
           </div><!-- .content-wrapper -->
         </article><!-- .section-wrapper -->
 
-        <article id="team" class="section-wrapper clearfix" data-custom-background-img="assets/images/pricing-panel/background-flipped.jpg">
+        <article id="team" class="section-wrapper clearfix" data-custom-background-img="assets/images/team-panel/background.jpg">
           <section class="page-block team" id="team">
             <div class="container">
               <h2 class="section-title heading-center">Team</h2>
               <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-4">
                   <img class="img-circle-thumbnail img-center" src="assets/images/team-panel/drew.jpg" alt="Drew"/>
-                  <h3>Dexter Dirk</h3>
-                  <p>Senior designer</p>
-                  <div class="social-networks">
-                    <a class="icon-facebook tooltipped" href="#" title="Facebook"></a>
-                    <a class="icon-instagram tooltipped" href="#" title="Instagram"></a>
-                  </div>
+                  <h3>Drew</h3>
+                  <p>Description</p>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4">
                   <img class="img-circle-thumbnail img-center" src="assets/images/team-panel/muhammad.png" alt="Muhammad"/>
-                  <h3>Alexander Roe</h3>
-                  <p>Financial director</p>
+                  <h3>Muhammad</h3>
+                  <p>Muhammad has been involved with technology and education in many varying ways. He was previously a product manager and mentor at Revolution Prep, a developer at Fullscreen, and most recently helped MakerSquare design curriculum for kids. Muhammad leads the afternoon sessions.</p>
                   <div class="social-networks">
                     <a class="icon-twitter tooltipped" href="#" title="Twitter"></a>
                     <a class="icon-google-plus tooltipped" href="#" title="Google+"></a>
@@ -545,12 +541,8 @@
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4">
                   <img class="img-circle-thumbnail img-center" src="assets/images/team-panel/lindsey.jpg" alt="Lindsey"/>
-                  <h3>Susanna Davis</h3>
-                  <p>Art director</p>
-                  <div class="social-networks">
-                    <a class="icon-youtube tooltipped" href="#" title="Youtube"></a>
-                    <a class="icon-tumblr tooltipped" href="#" title="Tumblr"></a>
-                  </div>
+                  <h3>Lindsey</h3>
+                  <p>Description</p>
                 </div>
 
               </div>
@@ -558,7 +550,7 @@
           </section>
         </article>
 
-        <article id="faq-panel" class="section-wrapper clearfix" data-custom-background-img="assets/images/sample-afternoon-panel/background.jpg">
+        <article id="faq-panel" class="section-wrapper clearfix" data-custom-background-img="assets/images/team-panel/background.jpg">
           <section class="page-block faq">
             <div class="container">
               <h2 class="section-title heading-center">FAQ</h2>
