--- a/public/index.html
+++ b/public/index.html
@@ -528,16 +528,12 @@
                 <div class="col-lg-4 col-md-4 col-sm-4">
                   <img class="img-circle-thumbnail img-center" src="assets/images/team-panel/drew.jpg" alt="Drew"/>
                   <h3>Drew</h3>
-                  <p>Description</p>
+                  <p>Drew's two big passions in life are education and technology. She worked as a high school Computer Science teacher in Oklahoma before moving down to the Austin area. She has a Master's in Teaching from Georgia State University and loves to get kids excited about learning. Drew leads the morning sessions.</p>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4">
                   <img class="img-circle-thumbnail img-center" src="assets/images/team-panel/muhammad.png" alt="Muhammad"/>
                   <h3>Muhammad</h3>
-                  <p>Muhammad has been involved with technology and education in many varying ways. He was previously a product manager and mentor at Revolution Prep, a developer at Fullscreen, and most recently helped MakerSquare design curriculum for kids. Muhammad leads the afternoon sessions.</p>
-                  <div class="social-networks">
-                    <a class="icon-twitter tooltipped" href="#" title="Twitter"></a>
-                    <a class="icon-google-plus tooltipped" href="#" title="Google+"></a>
-                  </div>
+                  <p>Muhammad has been involved with technology and education in many ways. He was previously a product manager and mentor at <a href="http://www.revolutionprep.com" target="_blank">Revolution Prep</a>, a developer at <a href="http://www.fullscreen.net" target="_blank">Fullscreen</a>, and most recently helped <a href="http://www.makersquare.com" target="_blank">MakerSquare</a> design curriculum for kids. Muhammad leads the afternoon sessions.</p>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4">
                   <img class="img-circle-thumbnail img-center" src="assets/images/team-panel/lindsey.jpg" alt="Lindsey"/>
@@ -561,12 +557,12 @@
                 <div class="col-lg-8 col-md-8 col-sm-8">
                   <div class="panel-group" id="accordion-faq">
                     <div class="panel">
-                      <a class="panel-heading collapsed" data-toggle="collapse" data-parent="#accordion-faq" href="#collapse1">FAQ 01
+                      <a class="panel-heading collapsed" data-toggle="collapse" data-parent="#accordion-faq" href="#collapse1">What are the age requirements on the summer camp?
                         <div class="indicator"><div class="icon"><span class="hr-line"></span><span class="vr-line"></span></div></div>
                       </a>
                       <div id="collapse1" class="panel-collapse collapse">
                         <div class="panel-body">
-                          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione.
+                          Most of our students are 10 or over. We do make exceptions for younger students with adequate typing skills that show high maturity. Email hello@mushroomlearning.com if you'd like for us to consider your case.
                         </div>
                       </div>
                     </div>
@@ -655,13 +651,12 @@
         <div id="go-to-top" onclick="scroll_to_top();"><span class="icon glyphicon glyphicon-chevron-up"></span></div>
 
         <ul class="social-icons">
-          <li><a href="#" target="_blank" title="Facebook"><img src="assets/images/theme_images/social_icons/facebook.png" alt="Facebook"></a></li>
-          <li><a href="#" target="_blank" title="Twitter"><img src="assets/images/theme_images/social_icons/twitter.png" alt="Twitter"></a></li>
-          <li><a href="#" target="_blank" title="Google+"><img src="assets/images/theme_images/social_icons/googleplus.png" alt="Google+"></a></li>
+          <li><a href="http://www.facebok.com/MushroomK12" target="_blank" title="Facebook"><img src="assets/images/theme_images/social_icons/facebook.png" alt="Facebook"></a></li>
+          <li><a href="http://www.twitter.com/MushroomK12" target="_blank" title="Twitter"><img src="assets/images/theme_images/social_icons/twitter.png" alt="Twitter"></a></li>
         </ul>
 
         <!-- copyright text -->
-        <div class="footer-text-line">&copy; 2014 Twilli | Air</div>
+        <div class="footer-text-line">&copy; 2014 Mushroom Learning</div>
       </section>
       <!-- end: Footer -->      
 
