added camp badge

--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
       <section id="left-sidebar">
         
         <div class="logo">
-          <a href="#intro" class="link-scroll">{ Mushroom Learning }</a>
+          <a href="#intro" class="link-scroll"><img src="assets/images/logo.png" alt="Mushroom Learning"></a>
         </div><!-- .logo -->
 
         <!-- Menu Icon for smaller viewports -->
@@ -97,6 +97,8 @@
           <li id="menu-item-faq-panel" class="menu-item scroll"><a href="#faq-panel">FAQ</a></li>
         </ul><!-- #main-menu -->
 
+        <img src="assets/images/flaticons/badge.png" alt="Summer camps" id="camp-badge">
+
       </section><!-- #left-sidebar -->
       <!-- end: Left Sidebar -->
 
@@ -105,7 +107,6 @@
         <article id="intro" class="section-wrapper clearfix" data-custom-background-img="assets/images/top-panel/background-flipped.jpg">
           <div class="content-wrapper clearfix">
             <div class="col-sm-10 col-md-9 pull-right">
-
                 <section class="feature-text">
                   <h1>Learn to <span style="color: #1F143A;">code.</span></h1>
                   <h1>Solve <span style="color: #1F143A;">problems.</span></h1>
@@ -564,6 +565,9 @@
                         <div class="panel-body">
                           Most of our students are 10 or over. We do make exceptions for younger students with adequate typing skills that show high maturity. Email hello@mushroomlearning.com if you'd like for us to consider your case.
                         </div>
+                        where are the locations?
+what kind of snacks and food will be provided
+age?
                       </div>
                     </div>
                     <div class="panel">
