changed cache control

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="cache-control" CONTENT="no-cache">
+    <meta http-equiv="expires" CONTENT="Wed, 26 May 2014 11:12:01 GMT">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
@@ -539,7 +541,7 @@
                 <div class="col-lg-4 col-md-4 col-sm-4">
                   <img class="img-circle-thumbnail img-center" src="assets/images/team-panel/lindsey.jpg" alt="Lindsey"/>
                   <h3>Lindsey</h3>
-                  <p>Description</p>
+                  <p>Lindsey previously worked as the Alumni Relations Coordinator of a major study abroad company where she specialized in professional development--teaching students college preparedness and how to leverage their experiences into marketable skills for future careers. Lindsey will be overseeing... </p>
                 </div>
 
               </div>
