--- a/public/index.html
+++ b/public/index.html
@@ -541,7 +541,7 @@
                 <div class="col-lg-4 col-md-4 col-sm-4">
                   <img class="img-circle-thumbnail img-center" src="assets/images/team-panel/lindsey.jpg" alt="Lindsey"/>
                   <h3>Lindsey</h3>
-                  <p>Lindsey previously worked as the Alumni Relations Coordinator of a major study abroad company where she specialized in professional development--teaching students college preparedness and how to leverage their experiences into marketable skills for future careers. Lindsey will be overseeing... </p>
+                  <p>Lindsey previously worked as the Alumni Relations Coordinator of a major study abroad company where she specialized in professional development--teaching students college preparedness and how to leverage their experiences into marketable skills for future careers. Lindsey will be overseeing the digital design portion of the camp</p>
                 </div>
 
               </div>
