--- a/public/index.html
+++ b/public/index.html
@@ -442,7 +442,7 @@
                   <h5>June 23 - June 27</h5>
                 </div>
                 <span class="col-md-12 typeform-date">
-                  <a class="typeform-share btn btn-primary btn-lg active typeform-button" href="https://www.eventbrite.com/e/summer-coding-camp-south-austin-tickets-11764157913" target="_blank" >South Austin Registration</a>
+                  <a class="typeform-share btn btn-primary btn-lg active typeform-button" href="http://bit.ly/camp-south" target="_blank" >South Austin Registration</a>
                 </span>  
               </div>
               <div class="col-lg-6 col-md-6 col-sm-6 dates">
@@ -464,7 +464,7 @@
                     <h5>July 14 - July 18</h5>
                   </div>
                   <span class="col-md-12 typeform-date">
-                    <a class="typeform-share btn btn-primary btn-lg active typeform-button" href="https://www.eventbrite.com/e/summer-coding-camp-south-austin-tickets-11764157913" target="_blank">North Austin Registration</a>
+                    <a class="typeform-share btn btn-primary btn-lg active typeform-button" href="http://bit.ly/north-camp" target="_blank">North Austin Registration</a>
                   </span>  
               </div>
             </div>
@@ -522,7 +522,7 @@
                 </div>
               </div>
               <div class="col-lg-12 col-md-12 col-sm-12">
-                <a class="typeform-share btn btn-primary btn-lg active typeform-button" href="http://www.eventbrite.com/o/mushroom-learning-6657590177?s=25496283" target="_blank">Registration page</a>
+                <a class="typeform-share btn btn-primary btn-lg active typeform-button" href="http://bit.ly/summer-events" target="_blank">Registration page</a>
               </div>
             </div>
           </div><!-- .content-wrapper -->
