dates/address panel update

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -191,7 +190,7 @@
 
 
                 <!-- Wrapper for slides -->
-                <h2 class="section-title heading-center">Sample morning session</h2>
+                <h2 class="section-title heading-center">Sample morning</h2>
 
                 <div class="carousel-inner">
 
@@ -280,7 +279,7 @@
                     </div>
                       <h3 class="left">Lunch and Yoga or Pickup</h3>
                       <h6 class="left">12:00pm - 1:00pm</h6>
-                      <p>Parents can either pick up their students or leave them for an optional lunch and yoga session.<sup>*</sup></p>
+                      <p>Nutritious lunch and light stretching.<sup>*</sup></p>
                       <p class="asterisk"><sup>*</sup>Please let us know of any dietary restrictions or allergies</p>
                     </div>
                   </div><!-- .item -->
@@ -305,16 +304,15 @@
                 <ol class="carousel-indicators title-indicators">
                   <li data-target="#features-carousel2" data-slide-to="0" class="active">1:00pm</li>
                   <li data-target="#features-carousel2" data-slide-to="1">1:30pm</li>
-                  <li data-target="#features-carousel2" data-slide-to="2">1:45pm</li>
-                  <li data-target="#features-carousel2" data-slide-to="3">2:45pm</li>
-                  <li data-target="#features-carousel2" data-slide-to="4">3:00pm</li>
-                  <li data-target="#features-carousel2" data-slide-to="5">3:30pm</li>
-                  <li data-target="#features-carousel2" data-slide-to="6">4:00pm</li>
-                  <li data-target="#features-carousel2" data-slide-to="7">4:30pm</li>
+                  <li data-target="#features-carousel2" data-slide-to="2">2:45pm</li>
+                  <li data-target="#features-carousel2" data-slide-to="3">3:00pm</li>
+                  <li data-target="#features-carousel2" data-slide-to="4">3:30pm</li>
+                  <li data-target="#features-carousel2" data-slide-to="5">4:00pm</li>
+                  <li data-target="#features-carousel2" data-slide-to="6">4:30pm</li>
                 </ol>
 
                 <!-- Wrapper for slides -->
-                <h2 class="section-title heading-center">Sample afternoon session</h2>
+                <h2 class="section-title heading-center">Sample afternoon</h2>
 
                 <div class="carousel-inner">
 
@@ -324,20 +322,8 @@
                       <img src="assets/images/flaticons/innovation-challenge.png" class="icon" alt="Innovation challenge">
                     </div>
                       <h2 class="title">Innovation Challenge</h2>
-                      <h6 class="left">Check-in</h6>
                       <h6 class="left">1:00pm - 1:30pm</h6>
-                      <p>Each afternoon session starts with an innovation challenge. For example, teams must build the tallest free-standing structure out of 20 sticks of spaghetti, one yard of tape, one yard of string, and one marshmallow.</p>
-                    </div>
-                  </div><!-- .item -->
-
-                  <div class="item">
-                    <div class="carousel-text-content">
-                    <div class="flaticon-margins">
-                      <img src="assets/images/flaticons/review.png" class="icon" alt="Review">
-                    </div>
-                      <h3 class="left">Review</h3>
-                      <h6 class="left">1:30pm - 1:45pm</h6>
-                      <p>A short review of topics and vocabulary covered the previous day.</p>
+                      <p>Each afternoon starts with an innovation challenge. For example, teams must build the tallest free-standing structure out of 20 sticks of spaghetti, one yard of tape, one yard of string, and one marshmallow.</p>
                     </div>
                   </div><!-- .item -->
 
@@ -347,7 +333,7 @@
                       <img src="assets/images/flaticons/coding.png" class="icon" alt="Coding Languages">
                     </div>
                       <h3 class="left">Coding Languages</h3>
-                      <h6 class="left">1:45pm - 2:45pm</h6>
+                      <h6 class="left">1:30pm - 2:45pm</h6>
                       <p>Continue working on a mini-project covering strings, integers, and terminal input/output using Ruby. Ruby is a powerful yet beginner-friendly language used for professional web apps all over the world.</p>
                     </div>
                   </div><!-- .item -->
@@ -402,8 +388,8 @@
                     <div class="flaticon-margins">
                       <img src="assets/images/flaticons/study-hall.png" class="icon" alt="Study hall">
                     </div>
-                      <h3 class="left">Study hall</h3>
-                      <h6 class="left">4:30pm - 6:30pm</h6>
+                      <h3 class="left">Optional Study hall</h3>
+                      <h6 class="left">4:30pm - 5:30pm</h6>
                       <p>Students work independently or with each other on their projects, logic puzzles and critical thinking games that are always available.</p>
                     </div>
                   </div><!-- .item -->
@@ -423,31 +409,35 @@
           <div class="content-wrapper clearfix">
             <h2 class="section-title heading-center">Dates</h2>
             <div class="row">
-              <div class="col-lg-6 col-md-6 col-sm-6">
+              <div class="col-lg-8 col-md-8 col-sm-6 col-lg-offset-2 col-md-offset-2 col-sm-offset-2">
                 <div class="date-table">
-                  <h3><a href="" onclick="populate_and_open_modal(event, 'modal-content-1');" class="btn btn-outline-inverse btn-sm">South Austin</a></h3>
-                  
-                  <div class="content-to-populate-in-modal" id="modal-content-1">
-                    <p><img data-img-src="assets/images/dates-panel/south-austin-location.jpg" class="lazy rounded_border hover_effect pull-right" id="south-austin-location-pic"alt="Creative Commons Art Studio"></p>
-                    <h5 class="location-header">Address</h5>
-                    <p>The Creative Commons Art Studio</p>
-                    <p>7600 Chelmsford Drive</p>
-                    <p>Austin, TX 78736</p>
+<!--                   <div class="col-lg-12 col-md-12 col-sm-12">
+                    <h3 class="location-button btn btn-outline-inverse btn-sm">West Los Angeles</h3>
+                  </div> -->
+                  <div class="col-lg-12 col-md-12 col-sm-12 address">
+                    <div class="col-lg-6 col-md-6 col-sm-6">
+                      <h3>Week 1</h3>
+                      <p>August 4 - August 8</p>
+                    </div>
+                    <div class="col-lg-6 col-md-6 col-sm-6">
+                      <h3>Week 2</h3>
+                      <p>August 11 - August 15</p>
+                    </div>
                   </div>
-                  <div class="col-lg-6 col-md-6 col-sm-6">
-                    <h3>Week 1</h3>
-                    <h5>June 16 - June 20</h5>
+                  <div class="col-lg-12 col-md-12 col-sm-12 address">
+                    <h3>Location</h3>
+                    <p>The City School</p>
+                    <p>11625 West Pico Blvd</p>
+                    <p>Los Angeles, CA 90064</p>
                   </div>
-                  <div class="col-lg-6 col-md-6 col-sm-6">
-                    <h3>Week 2</h3>
-                    <h5>June 23 - June 27</h5>
-                  </div>
+
                   <span class="col-md-12 typeform-date">
-                    <a class="typeform-share btn btn-primary btn-lg active typeform-button" href="http://bit.ly/camp-south" target="_blank" >South Austin Registration</a>
+                    <a class="typeform-share btn btn-primary btn-lg active typeform-button" href="http://bit.ly/camp-south" target="_blank" >Registration</a>
                   </span>  
                 </div>
               </div>
-              <div class="col-lg-6 col-md-6 col-sm-6">
+
+<!--               <div class="col-lg-6 col-md-6 col-sm-6">
                 <div class="date-table">
                   <h3><a href="" onclick="populate_and_open_modal(event, 'modal-content-2');" class="btn btn-outline-inverse btn-sm">North Austin</a></h3>
                   
@@ -471,7 +461,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+ -->            </div>
           </div><!-- .content-wrapper -->
         </article><!-- .section-wrapper -->
 
