--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@
           <li id="menu-item-overview" class="menu-item scroll"><a href="#overview">Overview</a></li>
           <li id="menu-item-carousel1" class="menu-item scroll"><a href="#carousel1">Sample morning</a></li>
           <li id="menu-item-carousel2" class="menu-item scroll"><a href="#carousel2">Sample afternoon</a></li>
-          <li id="menu-item-dates-panel" class="menu-item scroll"><a href="#dates-panel">dates</a></li>          
+          <li id="menu-item-dates-panel" class="menu-item scroll"><a href="#dates-panel">dates/location</a></li>          
           <li id="menu-item-cost" class="menu-item scroll"><a href="#cost">cost</a></li>          
           <li id="menu-item-team" class="menu-item scroll"><a href="#team">Team</a></li>          
           <li id="menu-item-faq-panel" class="menu-item scroll"><a href="#faq-panel">FAQ</a></li>
@@ -390,7 +390,8 @@
                     </div>
                       <h3 class="left">Optional Study hall</h3>
                       <h6 class="left">4:30pm - 5:30pm</h6>
-                      <p>Students work independently or with each other on their projects, logic puzzles and critical thinking games that are always available.</p>
+                      <p>Students work independently or with each other on their projects, logic puzzles and critical thinking games that are always available.<sup>*</sup></p>
+                      <p class="asterisk"><sup>*</sup>Study hall is an extra $10/day</p>
                     </div>
                   </div><!-- .item -->
 
@@ -409,12 +410,12 @@
           <div class="content-wrapper clearfix">
             <h2 class="section-title heading-center">Dates</h2>
             <div class="row">
-              <div class="col-lg-8 col-md-8 col-sm-6 col-lg-offset-2 col-md-offset-2 col-sm-offset-2">
+              <div class="col-lg-8 col-md-8 col-sm-8 col-lg-offset-2 col-md-offset-2 col-sm-offset-2">
                 <div class="date-table">
 <!--                   <div class="col-lg-12 col-md-12 col-sm-12">
                     <h3 class="location-button btn btn-outline-inverse btn-sm">West Los Angeles</h3>
                   </div> -->
-                  <div class="col-lg-12 col-md-12 col-sm-12 address">
+                  <div class="col-lg-12 col-md-12 col-sm-12 address-a">
                     <div class="col-lg-6 col-md-6 col-sm-6">
                       <h3>Week 1</h3>
                       <p>August 4 - August 8</p>
@@ -424,44 +425,19 @@
                       <p>August 11 - August 15</p>
                     </div>
                   </div>
-                  <div class="col-lg-12 col-md-12 col-sm-12 address">
+                  <div class="col-lg-12 col-md-12 col-sm-12 address-b">
                     <h3>Location</h3>
                     <p>The City School</p>
                     <p>11625 West Pico Blvd</p>
                     <p>Los Angeles, CA 90064</p>
                   </div>
 
-                  <span class="col-md-12 typeform-date">
-                    <a class="typeform-share btn btn-primary btn-lg active typeform-button" href="http://bit.ly/camp-south" target="_blank" >Registration</a>
-                  </span>  
                 </div>
               </div>
-
-<!--               <div class="col-lg-6 col-md-6 col-sm-6">
-                <div class="date-table">
-                  <h3><a href="" onclick="populate_and_open_modal(event, 'modal-content-2');" class="btn btn-outline-inverse btn-sm">North Austin</a></h3>
-                  
-                  <div class="content-to-populate-in-modal" id="modal-content-2">
-                    <p><img data-img-src="assets/images/dates-panel/north-austin-location.png" class="lazy rounded_border hover_effect pull-right" alt="Pat's Games"></p>
-                    <h5 class="location-header">Address</h5>
-                    <p>Pat's Games</p>
-                    <p>2308 Hancock Dr</p>
-                    <p>Austin, TX 78756</p>
-                  </div>         
-                  <div class="col-lg-6 col-md-6 col-sm-6">
-                    <h3>Week 3</h3>
-                    <h5>July 7 - July 11</h5>
-                  </div>
-                  <div class="col-lg-6 col-md-6 col-sm-6">
-                    <h3>Week 4</h3>
-                    <h5>July 14 - July 18</h5>
-                  </div>
-                  <div class="col-md-12 typeform-date">
-                    <a class="typeform-share btn btn-primary btn-lg active typeform-button" href="http://bit.ly/north-camp" target="_blank">North Austin Registration</a>
-                  </div>
-                </div>
-              </div>
- -->            </div>
+              <span class="col-lg-8 col-md-8 col-sm-8 col-lg-offset-2 col-md-offset-2 col-sm-offset-2 typeform-date">
+                <a class="typeform-share btn btn-primary btn-lg active typeform-button" href="http://bit.ly/camp-south" target="_blank" >Registration</a>
+              </span>  
+            </div>
           </div><!-- .content-wrapper -->
         </article><!-- .section-wrapper -->
 
@@ -471,21 +447,7 @@
           <div class="content-wrapper clearfix">
             <h2 class="section-title heading-center">Cost</h2>
             <div class="row">
-              <div class="col-lg-4 col-md-4 col-sm-4">
-                <div class="pricing-plan">
-                  <div class="header">
-                    <h3>Half day</h3>
-                    <span class="price">$199 <span style="font-size: .5em;">/ week</span></span>
-                  </div>
-                  <div class="body">
-                    <ul>
-                      <li>Either morning or afternoon</li>
-                      <li>Specialized focus</li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-4 col-md-4 col-sm-4">
+              <div class="col-lg-6 col-md-6 col-sm-6 col-lg-offset-3 col-md-offset-3 col-sm-offset-3">
                 <div class="pricing-plan highlited">
                   <div class="header-highlighted">
                     <h3>Full day</h3>
@@ -496,26 +458,13 @@
                       <li>Both morning and afternoon</li>
                       <li>Complete approach</li>
                       <li>Lunch and yoga included</li>
+                      <li>Optional study hall: $10/day</li>
                     </ul>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-4 col-sm-4">
-                <div class="pricing-plan">
-                  <div class="header">
-                    <h3>Extras</h3>
-                    <span class="price"></span>
-                  </div>
-                  <div class="body">
-                    <ul>
-                      <li>Aftercare: $10/hour</li>
-                      <li>Lunch and yoga: $15/day</li>
-                      <li>Laptop rental: $75/week</li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-12 col-md-12 col-sm-12">
+              
+              <div class="col-lg-6 col-md-6 col-sm-6 col-lg-offset-3 col-md-offset-3 col-sm-offset-3">
                 <a class="typeform-share btn btn-primary btn-lg active typeform-button" href="http://bit.ly/summer-events" target="_blank">Registration page</a>
               </div>
             </div>
