updated team and description panels

--- a/public/index.html
+++ b/public/index.html
@@ -143,27 +143,15 @@
                       <!-- <span class="icon glyphicon glyphicon-stats"></span> -->
                       <div class="text-content">
                         <h3>Web Development</h3>
-                        <h5>Morning session 9:00am - 12:00pm<sup>*</sup></h5>
-                        <p>Have you ever wanted to build a website from scratch? We use a combination of guided exercises, independent challenges, and unplugged activities to teach the fundamentals of HTML, CSS, and a touch of JavaScript. No coding experience required!</p>
+                        <h5>Full day session 9:00am - 4:30pm<sup>*</sup></h5>
+                        <p class="overview-p">Have you ever wanted to build a website from scratch? We use a combination of guided exercises, independent challenges, and unplugged activities to teach the fundamentals of HTML, CSS, and a touch of JavaScript. No coding experience required!</p>
+                        <p class="overview-p">Classes are project based and offer extensions for students of all levels.</p>
+                        <p class="asterisk"><sup>*</sup>Optional study hall from 4:30pm - 5:30pm</p>
                       </div>
                     </div><!-- end: .item-content -->
                   </div><!-- end: .grid-item -->
 
                   <!-- grid item -->
-                  <div class="grid-item col-md-6" style="width:100%">
-                    <div class="item-content clearfix">
-                      <img src="assets/images/flaticons/innovation-challenge.png" class="icon" alt="Innovation challenge">
-                      <!-- <span class="icon glyphicon glyphicon-record"></span> -->
-                      <div class="text-content">
-                        <h3>Critical Thinking</h3>
-                        <h5>Afternoon session 1:00pm - 4:00pm<sup>*</sup></h5>
-                        <p>Logic puzzles, algorithms, and abstraction, oh my! When Steve Jobs said "I think everybody in this country should learn how to program a computer because it teaches you how to think," this is what he was talking about. Learn how to think critically and solve problems through games, challenges, and a final project written in Ruby.</p>
-                        <div class="asterisk">
-                          <p><sup>*</sup>Lunch and aftercare are available</p>
-                        </div>
-                      </div>
-                    </div><!-- end: .item-content -->
-                  </div><!-- end: .grid-item -->
 
                 </section><!-- end: grid -->
 
@@ -411,7 +399,7 @@
             <h2 class="section-title heading-center">Dates</h2>
             <div class="row">
               <div class="col-lg-8 col-md-8 col-sm-8 col-lg-offset-2 col-md-offset-2 col-sm-offset-2">
-                <div class="date-table">
+                <div class="date-table round-1">
 <!--                   <div class="col-lg-12 col-md-12 col-sm-12">
                     <h3 class="location-button btn btn-outline-inverse btn-sm">West Los Angeles</h3>
                   </div> -->
@@ -435,7 +423,7 @@
                 </div>
               </div>
               <span class="col-lg-8 col-md-8 col-sm-8 col-lg-offset-2 col-md-offset-2 col-sm-offset-2 typeform-date">
-                <a class="typeform-share btn btn-primary btn-lg active typeform-button" href="http://bit.ly/camp-south" target="_blank" >Registration</a>
+                <a class="typeform-share btn btn-primary btn-lg active typeform-button round-3" href="http://bit.ly/camp-south" target="_blank" >Registration</a>
               </span>  
             </div>
           </div><!-- .content-wrapper -->
@@ -449,7 +437,7 @@
             <div class="row">
               <div class="col-lg-6 col-md-6 col-sm-6 col-lg-offset-3 col-md-offset-3 col-sm-offset-3">
                 <div class="pricing-plan highlited">
-                  <div class="header-highlighted">
+                  <div class="header-highlighted round-2">
                     <h3>Full day</h3>
                     <span class="price">$349 <span style="font-size: .5em;">/ week</span></span>
                   </div>
@@ -465,7 +453,7 @@
               </div>
               
               <div class="col-lg-6 col-md-6 col-sm-6 col-lg-offset-3 col-md-offset-3 col-sm-offset-3">
-                <a class="typeform-share btn btn-primary btn-lg active typeform-button" href="http://bit.ly/summer-events" target="_blank">Registration page</a>
+                <a class="typeform-share btn btn-primary btn-lg active typeform-button round-3" href="http://bit.ly/summer-events" target="_blank">Registration page</a>
               </div>
             </div>
           </div><!-- .content-wrapper -->
@@ -476,21 +464,21 @@
             <div class="container">
               <h2 class="section-title heading-center">Team</h2>
               <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-4">
-                  <img class="img-circle-thumbnail img-center" src="assets/images/team-panel/drew.jpg" alt="Drew"/>
-                  <h3>Drew</h3>
-                  <p>Drew's two big passions in life are education and technology. She worked as a high school Computer Science teacher in Oklahoma before moving down to the Austin area. She has a Master's in Teaching from Georgia State University and loves to get kids excited about learning. Drew leads the morning sessions.</p>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-lg-offset-2 col-md-offset-2 col-sm-offset-2">
+                  <img class="img-circle-thumbnail img-center" src="assets/images/team-panel/mike.png" alt="Michael"/>
+                  <h3>Michael</h3>
+                  <p>Michael brings a passion for education and years of experience in the educational technology space beginning at <a href="http://www.revolutionprep.com" target="_blank">Revolution Prep</a> and most recently at <a href="http://www.edlio.com" target="_blank">Edlio</a>. He is excited to be a part of a great team and help make education accessible to all.</p>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4">
                   <img class="img-circle-thumbnail img-center" src="assets/images/team-panel/muhammad.png" alt="Muhammad"/>
                   <h3>Muhammad</h3>
-                  <p>Muhammad has been involved with technology and education in many ways. He was previously a product manager and mentor at <a href="http://www.revolutionprep.com" target="_blank">Revolution Prep</a>, a developer at <a href="http://www.fullscreen.net" target="_blank">Fullscreen</a>, and most recently helped <a href="http://www.makersquare.com" target="_blank">MakerSquare</a> design curriculum for kids. Muhammad leads the afternoon sessions.</p>
+                  <p>A former Teen Jeopardy! semi-finalist, Muhammad has been involved with technology and education in many ways. He was previously a product manager and mentor at <a href="http://www.revolutionprep.com" target="_blank">Revolution Prep</a>, a developer at <a href="http://www.fullscreen.net" target="_blank">Fullscreen</a>, and most recently helped <a href="http://www.makersquare.com" target="_blank">MakerSquare</a> design curriculum for kids.</p>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-4">
+<!--                 <div class="col-lg-4 col-md-4 col-sm-4">
                   <img class="img-circle-thumbnail img-center" src="assets/images/team-panel/lindsey.jpg" alt="Lindsey"/>
                   <h3>Lindsey</h3>
                   <p>Lindsey previously worked as the Alumni Relations Coordinator of a major study abroad company where she specialized in professional development--teaching students college preparedness and how to leverage their experiences into marketable skills for future careers. Lindsey will be overseeing the digital design portion of the camp</p>
-                </div>
+                </div> -->
 
               </div>
             </div>
@@ -513,35 +501,31 @@
                       </a>
                       <div id="collapse1" class="panel-collapse collapse">
                         <div class="panel-body">
-                          Most of our students are 10 or over. We occasionally make exceptions for precocious younger students. Please email hello@mushroomlearning.com if you would would like to know more about exceptions.
+                          Most of our students are 12 or over. We occasionally make exceptions for advanced younger students. Please email hello@mushroomlearning.com if you would would like to know more about exceptions.
                         </div>
                       </div>
                     </div>
                     <div class="panel">
-                      <a class="panel-heading collapsed" data-toggle="collapse" data-parent="#accordion-faq" href="#collapse2">Where are the locations?
+                      <a class="panel-heading collapsed" data-toggle="collapse" data-parent="#accordion-faq" href="#collapse3">What kind of snacks and lunch will be provided?
                         <div class="indicator"><div class="icon"><span class="hr-line"></span><span class="vr-line"></span></div></div>
                       </a>
-                      <div id="collapse2" class="panel-collapse collapse">
-                        <div class="panel-body">
-                          <h6>North Austin</h6>
-                          <p>The Creative Commons Art Studio</p>
-                          <p>7600 Chelmsford Drive</p>
-                          <p>Austin, TX 78736</p>
-                          <h6>South Austin</h6>
-                          <p>Pat's Games</p>
-                          <p>2308 Hancock Dr</p>
-                          <p>Austin, TX 78756</p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="panel">
-                      <a class="panel-heading" data-toggle="collapse" data-parent="#accordion-faq" href="#collapse3">What kind of snacks and lunch will be provided?
-                        <div class="indicator"><div class="icon"><span class="hr-line"></span><span class="vr-line"></span></div></div>
-                      </a>
-                      <div id="collapse3" class="panel-collapse collapse in">
+                      <div id="collapse3" class="panel-collapse collapse">
                         <div class="panel-body">
                           <p>Snacks will vary from sliced fruit to hummus and pita chips and lightly salted popcorn. Lunches will be a balanced combination of easy to eat foods.</p>
                           <p>If you have any concerns or there are any dietary restrictions we should know about, please email hello@mushroomlearning.com</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="panel">
+                      <a class="panel-heading" data-toggle="collapse" data-parent="#accordion-faq" href="#collapse2">Where is the camp located?
+                        <div class="indicator"><div class="icon"><span class="hr-line"></span><span class="vr-line"></span></div></div>
+                      </a>
+                      <div id="collapse2" class="panel-collapse collapse in">
+                        <div class="panel-body">
+                          <h6>West Los Angeles</h6>
+                          <p>The City School</p>
+                          <p>11625 West Pico Blvd</p>
+                          <p>Los Angeles, CA 90064</p>
                         </div>
                       </div>
                     </div>
@@ -550,9 +534,9 @@
               </div>
               <div class="row contact-us">
                 <h3>Still have questions?</h3>
-                <h5>Call us between 9am - 6pm at 512-222-9154</h5>
+                <h5>Call us between 9am - 6pm at 424-244-9794</h5>
                 <h5>Email us at <a href="mailto:hello@mushroomlearning.com">hello@mushroomlearning.com</a></h5>
-                <a class="typeform-share btn btn-primary btn-lg active typeform-button2" role="button" href="https://mushroomlearning.typeform.com/to/g6IqRe" data-mode="2" target="_blank" >Set up a time to talk</a>
+                <a class="typeform-share btn btn-primary btn-lg active typeform-button2 round-4" role="button" href="https://mushroomlearning.typeform.com/to/g6IqRe" data-mode="2" target="_blank" >Set up a time to talk</a>
                 <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
 
               </div>
