--- a/public/index.html
+++ b/public/index.html
@@ -423,7 +423,7 @@
                 </div>
               </div>
               <span class="col-lg-8 col-md-8 col-sm-8 col-lg-offset-2 col-md-offset-2 col-sm-offset-2 typeform-date">
-                <a class="typeform-share btn btn-primary btn-lg active typeform-button round-3" href="http://bit.ly/camp-south" target="_blank" >Registration</a>
+                <a class="typeform-share btn btn-primary btn-lg active typeform-button round-3" href="http://bit.ly/coding-la" target="_blank" >Registration</a>
               </span>  
             </div>
           </div><!-- .content-wrapper -->
@@ -453,7 +453,7 @@
               </div>
               
               <div class="col-lg-6 col-md-6 col-sm-6 col-lg-offset-3 col-md-offset-3 col-sm-offset-3">
-                <a class="typeform-share btn btn-primary btn-lg active typeform-button round-3" href="http://bit.ly/summer-events" target="_blank">Registration page</a>
+                <a class="typeform-share btn btn-primary btn-lg active typeform-button round-3" href="http://bit.ly/coding-la" target="_blank">Registration page</a>
               </div>
             </div>
           </div><!-- .content-wrapper -->
@@ -506,21 +506,31 @@
                       </div>
                     </div>
                     <div class="panel">
+                      <a class="panel-heading collapsed" data-toggle="collapse" data-parent="#accordion-faq" href="#collapse2">Is there any any experience required to join?
+                        <div class="indicator"><div class="icon"><span class="hr-line"></span><span class="vr-line"></span></div></div>
+                      </a>
+                      <div id="collapse2" class="panel-collapse collapse">
+                        <div class="panel-body">
+                          This class is inteded for students with no previous coding experience. There will be around 2 hours of pre-work to be done before the first day of class.
+                        </div>
+                      </div>
+                    </div>
+                    <div class="panel">
                       <a class="panel-heading collapsed" data-toggle="collapse" data-parent="#accordion-faq" href="#collapse3">What kind of snacks and lunch will be provided?
                         <div class="indicator"><div class="icon"><span class="hr-line"></span><span class="vr-line"></span></div></div>
                       </a>
                       <div id="collapse3" class="panel-collapse collapse">
                         <div class="panel-body">
                           <p>Snacks will vary from sliced fruit to hummus and pita chips and lightly salted popcorn. Lunches will be a balanced combination of easy to eat foods.</p>
-                          <p>If you have any concerns or there are any dietary restrictions we should know about, please email hello@mushroomlearning.com</p>
+                          <p>If you have any concerns or there are any dietary restrictions we should know about, please email hello@mushroomlearning.com.</p>
                         </div>
                       </div>
                     </div>
                     <div class="panel">
-                      <a class="panel-heading" data-toggle="collapse" data-parent="#accordion-faq" href="#collapse2">Where is the camp located?
+                      <a class="panel-heading" data-toggle="collapse" data-parent="#accordion-faq" href="#collapse4">Where is the camp located?
                         <div class="indicator"><div class="icon"><span class="hr-line"></span><span class="vr-line"></span></div></div>
                       </a>
-                      <div id="collapse2" class="panel-collapse collapse in">
+                      <div id="collapse4" class="panel-collapse collapse in">
                         <div class="panel-body">
                           <h6>West Los Angeles</h6>
                           <p>The City School</p>
