--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@
       <section id="left-sidebar">
         
         <div class="logo">
-          <a href="#intro" class="link-scroll"><a><img src="assets/images/logo-icon.png" alt="Mushroom Learning"></a>
+          <a href="#intro" class="link-scroll"><a><img src="assets/images/logo-rounded.png" alt="Mushroom Learning"></a>
         </div><!-- .logo -->
 
         <!-- Menu Icon for smaller viewports -->
