--- a/public/index.html
+++ b/public/index.html
@@ -406,11 +406,11 @@
                   <div class="col-lg-12 col-md-12 col-sm-12 address-a">
                     <div class="col-lg-6 col-md-6 col-sm-6">
                       <h3>Week 1</h3>
-                      <p>August 4 - August 8</p>
+                      <p class="small-date">August 4 - August 8</p>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6">
                       <h3>Week 2</h3>
-                      <p>August 11 - August 15</p>
+                      <p class="small-date">August 11 - August 15</p>
                     </div>
                   </div>
                   <div class="col-lg-12 col-md-12 col-sm-12 address-b">
