--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,21 @@
       ga('send', 'pageview');
     </script>
 
+    <!-- Begin Inspectlet Embed Code -->
+    <script type="text/javascript" id="inspectletjs">
+      window.__insp = window.__insp || [];
+      __insp.push(['wid', 1653948167]);
+      (function() {
+        function __ldinsp(){var insp = document.createElement('script'); insp.type = 'text/javascript'; insp.async = true; insp.id = "inspsync"; insp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://cdn.inspectlet.com/inspectlet.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(insp, x); }
+        if (window.attachEvent){
+          window.attachEvent('onload', __ldinsp);
+        }else{
+          window.addEventListener('load', __ldinsp, false);
+        }
+      })();
+    </script>
+    <!-- End Inspectlet Embed Code -->
+
     <!-- Jquery and Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
