--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="expires" CONTENT="Wed, 26 May 2014 11:12:01 GMT">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Welcome to Mushroom Learning! We teach kids to code in HTML, CSS, and JavaScript. We are hosting summer camps and ongoing classes in Los Angeles, California.">
+    <meta name="author" content="Mushroom Learning">
 
-    <title>Mushroom Learning</title>
+    <title>Mushroom Learning -- Summer Code Camp in Los Angeles</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -131,10 +131,10 @@
           <div class="content-wrapper clearfix">
             <div class="col-sm-10 col-md-9 pull-right">
                 <section class="feature-text">
-                  <h1>Learn to <span class="top-panel-emphasis">code.</span></h1>
-                  <h1>Solve <span class="top-panel-emphasis">problems.</span></h1>
-                  <h1>Shape the <span class="top-panel-emphasis">future.</span></h1>
-                  <span id="camp-badge"><a href="#overview" class="link-scroll"><img src="assets/images/flaticons/badge-3.png" alt="Summer camps"></a></span><p id="top-panel-subtext">Join our one-week summer camp that teaches students computational thinking, problem solving, and building a webpage from scratch using HTML, CSS, and JavaScript.</p>
+                  <h2 class="h1-resizing">Learn to <span class="top-panel-emphasis">code.</span></h2>
+                  <h2 class="h1-resizing">Solve <span class="top-panel-emphasis">problems.</span></h2>
+                  <h2 class="h1-resizing">Shape the <span class="top-panel-emphasis">future.</span></h2>
+                  <span id="camp-badge"><a href="#overview" class="link-scroll"><img src="assets/images/flaticons/badge-3.png" alt="Mushroom Learning summer camps"></a></span><p id="top-panel-subtext">Join Mushroom Learning's one-week summer camp that teaches students computational thinking, problem solving, and building a webpage from scratch using HTML, CSS, and JavaScript.</p>
                   
                 </section>
 
@@ -146,7 +146,7 @@
           <div class="content-wrapper clearfix">
             <div class="col-sm-11 col-md-10 pull-left">
 
-                <h1 class="section-title heading-center">Overview</h1>
+                <h1 class="section-title heading-center">Mushroom Learning Overview</h1>
                 
                 <!-- grid -->
                 <section class="grid row clearfix clearfix-for-2cols">
@@ -193,7 +193,7 @@
 
 
                 <!-- Wrapper for slides -->
-                <h2 class="section-title heading-center">Sample morning</h2>
+                <h2 class="section-title heading-center">Summer Camp - Sample Morning</h2>
 
                 <div class="carousel-inner">
 
@@ -315,7 +315,7 @@
                 </ol>
 
                 <!-- Wrapper for slides -->
-                <h2 class="section-title heading-center">Sample afternoon</h2>
+                <h2 class="section-title heading-center">Summer Camp - Sample Afternoon</h2>
 
                 <div class="carousel-inner">
 
@@ -411,7 +411,7 @@
 
         <article id="dates-panel" class="section-wrapper clearfix" data-custom-background-img="assets/images/pricing-panel/background-flipped.jpg">         
           <div class="content-wrapper clearfix">
-            <h2 class="section-title heading-center">Dates</h2>
+            <h2 class="section-title heading-center">Los Angeles Dates and Location</h2>
             <div class="row">
               <div class="col-lg-8 col-md-8 col-sm-8 col-lg-offset-2 col-md-offset-2 col-sm-offset-2">
                 <div class="date-table round-1">
@@ -448,7 +448,7 @@
 
 
           <div class="content-wrapper clearfix">
-            <h2 class="section-title heading-center">Cost</h2>
+            <h2 class="section-title heading-center">Coding Camp Cost</h2>
             <div class="row">
               <div class="col-lg-6 col-md-6 col-sm-6 col-lg-offset-3 col-md-offset-3 col-sm-offset-3">
                 <div class="pricing-plan highlited">
@@ -477,7 +477,7 @@
         <article id="team" class="section-wrapper clearfix" data-custom-background-img="assets/images/team-panel/background.jpg">
           <section class="page-block team" id="team">
             <div class="container">
-              <h2 class="section-title heading-center">Team</h2>
+              <h2 class="section-title heading-center">Mushroom Learning Team</h2>
               <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-4 col-lg-offset-2 col-md-offset-2 col-sm-offset-2">
                   <img class="img-circle-thumbnail img-center" src="assets/images/team-panel/mike.png" alt="Michael"/>
@@ -503,7 +503,7 @@
         <article id="faq-panel" class="section-wrapper clearfix" data-custom-background-img="assets/images/team-panel/background.jpg">
           <section class="page-block faq">
             <div class="container">
-              <h2 class="section-title heading-center">FAQ</h2>
+              <h2 class="section-title heading-center">Summer Camp FAQ</h2>
               <div class="row">
                 <div class="col-lg-3 col-md-4 col-sm-4">
                   <img class="img-center" src="assets/images/flaticons/faq.png" alt="FAQ"/>
