overview heading font-size adjust

--- a/public/index.html
+++ b/public/index.html
@@ -146,7 +146,7 @@
           <div class="content-wrapper clearfix">
             <div class="col-sm-11 col-md-10 pull-left">
 
-                <h1 class="section-title heading-center">Mushroom Learning Overview</h1>
+                <h1 class="section-title heading-center overview-sizing">Mushroom Learning Overview</h1>
                 
                 <!-- grid -->
                 <section class="grid row clearfix clearfix-for-2cols">
