--- a/public/index.html
+++ b/public/index.html
@@ -129,6 +129,12 @@
         
         <article id="intro" class="section-wrapper clearfix" data-custom-background-img="assets/images/top-panel/background-flipped.jpg">
           <div class="content-wrapper clearfix">
+            <div class="col-sm-12 col-md-12">
+              <section class="nav-bar">
+                <img src="assets/images/flaticons/badge-3.png" alt="Mushroom Learning summer camp">
+                <img src="assets/images/flaticons/badge-3.png" alt="Mushroom Learning summer camp">
+              </section>
+            </div>
             <div class="col-sm-10 col-md-9 pull-right">
                 <section class="feature-text">
                   <h2 class="h1-resizing">Learn to <span class="top-panel-emphasis">code.</span></h2>
