--- a/public/summer-camp.html
+++ b/public/summer-camp.html
@@ -114,8 +114,11 @@
 
         <ul id="main-menu">
           <li id="menu-item-home" class="menu-item scroll"><a href="/">Home</a></li>
-          <li id="menu-item-summer-camp" class="menu-item scroll"><a href="/summer_camp">Summer Camp</a></li>
-          <li id="menu-item-workshop" class="menu-item scroll"><a href="/workshops">Workshops</a></li>          
+          <li id="menu-item-summer-camp" class="menu-item scroll"><a href="#">Summer Camp</a></li>
+          <li id="menu-item-overview" class="menu-item sub-menu-item scroll"><a href="#overview"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">Overview</a></li>
+          <li id="menu-item-carousel1" class="menu-item sub-menu-item scroll"><a href="#carousel1"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">Sample day</a></li>
+          <li id="menu-item-dates-panel" class="menu-item sub-menu-item scroll"><a href="#dates-panel"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">dates/location</a></li>          
+          <li id="menu-item-cost" class="menu-item sub-menu-item scroll"><a href="#cost"><img src="assets/images/flaticons/nav-bar-arrow.png" alt="arrow">Cost</a></li>    <li id="menu-item-workshop" class="menu-item scroll"><a href="/workshops">Workshops</a></li>          
           <li id="menu-item-about-us" class="menu-item scroll"><a href="/about_us">About us</a></li>          
           <li id="menu-item-faq-panel" class="menu-item scroll"><a href="/faq">FAQ</a></li>
         </ul><!-- #main-menu -->
@@ -125,27 +128,6 @@
 
       <section id="main-content" class="clearfix">
         
-        <article id="home" class="section-wrapper clearfix" data-custom-background-img="assets/images/top-panel/background-flipped.jpg">
-          <div class="content-wrapper clearfix">
-            <div class="col-sm-12 col-md-12">
-              <section class="nav-bar">
-                <img src="assets/images/flaticons/badge-6.png" alt="Mushroom Learning summer camp">
-                <img src="assets/images/flaticons/badge-7.png" alt="Mushroom Learning summer camp">
-              </section>
-            </div>
-            <div class="col-sm-10 col-md-9 pull-right">
-                <section class="feature-text">
-                  <h2 class="h1-resizing">Learn to <span class="top-panel-emphasis">code.</span></h2>
-                  <h2 class="h1-resizing">Solve <span class="top-panel-emphasis">problems.</span></h2>
-                  <h2 class="h1-resizing">Shape the <span class="top-panel-emphasis">future.</span></h2>
-                  <span id="camp-badge"><a href="#overview" class="link-scroll"><img src="assets/images/flaticons/badge-3.png" alt="Mushroom Learning summer camps"></a></span><p id="top-panel-subtext">Join Mushroom Learning's one-week summer camp that teaches students computational thinking, problem solving, and building a webpage from scratch using HTML, CSS, and JavaScript.</p>
-                  
-                </section>
-
-            </div><!-- .col-sm-10 -->
-          </div><!-- .content-wrapper -->
-        </article><!-- .section-wrapper -->
-
         <article id="overview" class="section-wrapper clearfix" data-custom-background-img="assets/images/overview-panel/background.jpg">
           <div class="content-wrapper clearfix">
             <div class="col-sm-11 col-md-10 pull-left">
@@ -399,7 +381,7 @@
                     <h3 class="location-button btn btn-outline-inverse btn-sm">West Los Angeles</h3>
                   </div> -->
                   <div class="col-lg-12 col-md-12 col-sm-12 address-a">
-                    <div class="col-lg-6 col-md-6 col-sm-6">
+                    <div class="col-lg-6 col-md-6 col-sm-6" style="border-right: 1px solid #fff;">
                       <h3>Week 1</h3>
                       <p class="small-date">July 28 - August 1</p>
                     </div>
